// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders an Avatar - Next Image 1`] = `
.c0 {
  height: 5rem;
  width: 5rem;
  position: relative;
}

.c1 {
  border-radius: 50%;
}

<div
  class="c0"
  size="80"
>
  <img
    alt=""
    class="c1"
    data-nimg="1"
    decoding="async"
    height="80"
    loading="lazy"
    src="/_next/image?url=https%3A%2F%2Ftest.com%2Fimage.png&w=256&q=100"
    srcset="/_next/image?url=https%3A%2F%2Ftest.com%2Fimage.png&w=96&q=100 1x, /_next/image?url=https%3A%2F%2Ftest.com%2Fimage.png&w=256&q=100 2x"
    style="color: transparent;"
    width="80"
  />
</div>
`;

exports[`Avatar renders an Avatar - default img tag 1`] = `
.c0 {
  height: 5rem;
  width: 5rem;
  position: relative;
}

.c1 {
  border-radius: 50%;
  width: 100%;
  height: 100%;
}

<div
  class="c0"
  size="80"
>
  <img
    alt=""
    class="c1"
    src="https://test.com/image.png"
  />
</div>
`;
